# nexwick

./: Cargo.toml  LICENSE-MIT  README.md
nexwick/: .gitignore  CHANGELOG.md  Cargo.toml
nexwick-py/src/model/: py_compact_vertex.rs
nexwick/benches/: README.md  benchmark.rs
nexwick/benches/fixtures/: ds1-n27-1k.trees  yule-n50-1k.trees
nexwick/src/: lib.rs  main.rs
nexwick/src/model/: annotation.rs  compact_tree_builder.rs  mod.rs  simple_tree_builder.rs  tree.rs  tree_builder.rs  vertex.rs
nexwick/src/newick/: mod.rs  parser.rs  writer.rs
nexwick/src/nexus/: defs.rs  parser.rs
nexwick/src/parser/: buffered_byte_source.rs  byte_parser.rs  byte_source.rs  in_memory_byte_source.rs  mod.rs  parsing_error.rs  utils.rs
nexwick/tests/: test_byte_parser.rs  test_leaf_label_map.rs  test_newick.rs  test_nexus.rs  tree_tests.rs  vertex_tests.rs
nexwick/tests/fixtures/: edge_case_trees.nwk  nexus_aars_t5_n142_annotation.trees  nexus_t11_n20_translate.trees  nexus_t1_n10.trees  nexus_t3_n10_comments.trees
src/: lib.rs  main.rs
src/io/: defs.rs
src/model/: compact_tree_builder.rs  label_resolver.rs  label_storage.rs  leaf_label_map.rs  mod.rs  simple_tree_builder.rs  tree.rs  tree_builder.rs  vertex.rs
src/newick/: defs.rs  mod.rs  parser.rs  writer.rs
src/nexus/: defs.rs  mod.rs  parser.rs  writer.rs
src/parser/: byte_parser.rs  byte_source.rs  mod.rs  newick.rs  nexus.rs  parsing_error.rs  utils.rs
tests/: test_byte_parser.rs  test_leaf_label_map.rs  test_newick.rs  test_nexus.rs  tree_tests.rs  vertex_tests.rs
tests/fixtures/: newick_t4_n10.nwk
(+4 files in other folders)
